fix: rename the generated sources folder
