# rpc/generated-sources/openapi/src/apis/default_api.rs
@@ -1,52 +1,0 @@
-/*
- * Outbox RPC API
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- * Generated by: https://openapi-generator.tech
- */
-
-
-use reqwest;
-
-use crate::apis::ResponseContent;
-use super::{Error, configuration};
-
-
-/// struct for typed errors of method [`api_outbox_messages_get`]
-#[derive(Debug, Clone, Serialize, Deserialize)]
-#[serde(untagged)]
-pub enum ApiOutboxMessagesGetError {
-    UnknownValue(serde_json::Value),
-}
-
-
-pub async fn api_outbox_messages_get(configuration: &configuration::Configuration, ) -> Result<Vec<crate::models::Message>, Error<ApiOutboxMessagesGetError>> {
-    let local_var_configuration = configuration;
-
-    let local_var_client = &local_var_configuration.client;
-
-    let local_var_uri_str = format!("{}/api/outbox/messages", local_var_configuration.base_path);
-    let mut local_var_req_builder = local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
-
-    if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
-        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
-    }
-
-    let local_var_req = local_var_req_builder.build()?;
-    let local_var_resp = local_var_client.execute(local_var_req).await?;
-
-    let local_var_status = local_var_resp.status();
-    let local_var_content = local_var_resp.text().await?;
-
-    if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
-        serde_json::from_str(&local_var_content).map_err(Error::from)
-    } else {
-        let local_var_entity: Option<ApiOutboxMessagesGetError> = serde_json::from_str(&local_var_content).ok();
-        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
-        Err(Error::ResponseError(local_var_error))
-    }
-}
-
